--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
-    "react-dom/client": "^19.0.0",
+    "react-dom": "^19.0.0"
     "react-router-dom": "^6.22.0",
     "leaflet": "^1.9.4",
     "react-hook-form": "^7.56.4",
